--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,16 +1,16 @@
 name: Build-OpenWrt
 
 on:
-  push:
-    branches: 
-      - master
+#   push:
+#     branches: 
+#       - master
 #  release:
 #    types: published
 #  schedule:
 #    - cron: 0 8 * * 5
 #  watch:
 #    types: started
-#  repository_dispatch:
+ repository_dispatch:
 
 jobs:
   build:
