--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -10,7 +10,7 @@ on:
 #    - cron: 0 8 * * 5
 #  watch:
 #    types: started
- repository_dispatch:
+ workflow_dispatch:
    inputs:
       build-device:
         description: 'Target device name'
