--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -70,7 +70,7 @@ jobs:
         config_file_name=.config.${{ github.event.inputs.build-device }}
         [ -f "${config_file_name}" ] && mv -f ${ config_file_name } .config || echo "Don't exisit ${config_file_name}"
         make defconfig
-        [ "${{github.event.inputs.build-proc}"==""] && make -j$[$(nproc)+1] || make -j ${{github.event.inputs.build-proc }}
+        [ "${{github.event.inputs.build-proc}}"==""] && make -j$[$(nproc)+1] || make -j ${{github.event.inputs.build-proc }}
         rm -rf build_dir/target* build_dir/toolchain* staging_dir/target* staging_dir/toolchain*
     - name: After Build
       run: |
